# automated_rag_ms_deployment

./: .dockerignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
core/: utils.py
core/config/: settings.py
core/database/: document_store.py  qdrant_client.py
core/models/: document.py  search_result.py  text.py
core/routers/: document_chat.py  document_index.py  text_embed.py
core/services/: embedding_service.py  response_generator.py  search_engine.py
scripts/: ingest_document.py  interactive_search.py  setup_database.py
