[project]
name = "automated-rag-ms-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "qdrant-client>=1.16.2",
    "rich>=14.3.2",
    "sentence-transformers[onnx]>=5.2.2",
    "tiktoken>=0.12.0",
]
